# embedded

./: CMakeLists.txt  main.cpp
src/: io.cpp  io.hpp  main.cpp  morse.cpp  morse.hpp
